--- a/.github/workflows/nuclearbot.yml
+++ b/.github/workflows/nuclearbot.yml
@@ -34,5 +34,5 @@ jobs:
       # Run the bot script
       - name: Run Bot Script
         run: |
-          python "my_repository/bot_template.py"
+          python "CNL-Bluesky.py"
           echo "Bot feed refreshed"
