--- a/.github/workflows/nuclearbot.yml
+++ b/.github/workflows/nuclearbot.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          if [ -f requirement.txt ]; then pip install -r requirement.txt; fi
 
       # Write Google credentials JSON
       - name: Write service account JSON
