--- a/.github/workflows/nuclearbot.yml
+++ b/.github/workflows/nuclearbot.yml
@@ -1,40 +1,37 @@
 name: Bot Feed Updates
 
 on: 
-  workflow_dispatch:      # manual trigger
+  workflow_dispatch:
   schedule:
-    - cron: "*/1 * * * *"   # runs every minute
+    - cron: "*/1 * * * *"   # every minute
 
 jobs: 
   feed-update: 
     runs-on: ubuntu-latest 
 
     steps:
-      # 1️⃣ Checkout the repository
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Set up Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with: 
           python-version: '3.13.7'
 
-      # 3️⃣ Install dependencies
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           if [ -f requirement.txt ]; then pip install -r requirement.txt; fi
           pip install gspread google-auth google-auth-oauthlib google-auth-httplib2
 
-      # 4️⃣ Create folder and write service account JSON
       - name: Write service account JSON
         run: |
-          mkdir -p Bluesky-bot
-          printf "%s" "${{ secrets.GOOGLE_CREDENTIALS }}" > Bluesky-bot/service_account.json
+          printf "%s" "${{ secrets.GOOGLE_CREDENTIALS }}" > service_account.json
 
-      # 5️⃣ Run the bot script
+      - name: Debug - List files
+        run: ls -R
+
       - name: Run Bot Script
         run: |
-          python Bluesky-bot/CNL-Bluesky.py
+          python CNL-Bluesky.py
           echo "Bot feed refreshed"
