--- a/.github/workflows/nuclearbot.yml
+++ b/.github/workflows/nuclearbot.yml
@@ -3,7 +3,7 @@ name: Bot Feed Updates
 on:
   workflow_dispatch: # manual trigger
   schedule:
-    - cron: "*/1 * * * *" # runs every minute (fixed syntax)
+    - cron: "*/5 * * * *" # runs every 5 minutes
 
 jobs:
   feed-update:
@@ -27,11 +27,12 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           pip install gspread google-auth google-auth-oauthlib google-auth-httplib2
       
-      # 4️⃣ Write service account JSON to the correct location
-      - name: Write service account JSON
+      # 4️⃣ Create secrets folder and write credentials
+      - name: Write credentials files
         run: |
+          mkdir -p secrets
           echo '${{ secrets.GOOGLE_CREDENTIALS }}' > service_account.json
-          cat service_account.json  # Debug: show the file (remove after fixing)
+          echo '${{ secrets.BLUESKY_CREDENTIALS }}' > secrets/credentials.json
       
       # 5️⃣ Run the bot script
       - name: Run Bot Script
