--- a/.github/workflows/nuclearbot.yml
+++ b/.github/workflows/nuclearbot.yml
@@ -1,20 +1,18 @@
 name: Bot Feed Updates
 
 on:
-  workflow_dispatch: # manual trigger
+  workflow_dispatch:
   schedule:
-    - cron: "*/5 * * * *" # runs every 5 minutes
+    - cron: "*/5 * * * *"
 
 jobs:
   feed-update:
     runs-on: ubuntu-latest
     
     steps:
-      # 1️⃣ Checkout the repository
       - name: Checkout Repository
         uses: actions/checkout@v4
       
-      # 2️⃣ Download previous state (if exists)
       - name: Download previous state
         continue-on-error: true
         uses: actions/download-artifact@v4
@@ -22,33 +20,28 @@ jobs:
           name: truck-state
           path: .
       
-      # 3️⃣ Set up Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.13.7'
       
-      # 4️⃣ Install dependencies
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          pip install gspread google-auth google-auth-oauthlib google-auth-httplib2
+          pip install gspread google-auth google-auth-oauthlib google-auth-httplib2 atproto
       
-      # 5️⃣ Create secrets folder and write credentials
       - name: Write credentials files
         run: |
           mkdir -p secrets
           echo '${{ secrets.GOOGLE_CREDENTIALS }}' > service_account.json
           echo '${{ secrets.BLUESKY_CREDENTIALS }}' > secrets/credentials.json
       
-      # 6️⃣ Run the bot script
       - name: Run Bot Script
         run: |
           python CNL-Bluesky.py
           echo "Bot feed refreshed"
       
-      # 7️⃣ Upload state file for next run
       - name: Upload state file
         if: always()
         uses: actions/upload-artifact@v4
